@@ -10,6 +10,7 @@ version 0.04:
 	- add is_pivate_ipv4() and is_private_ipv6().
 	- generate HTML version of all OpenConsole modules.
 	- move connection to Users and Assets to OwnerConsole.
+	- every object got an updated field.
 
 version 0.03: Sat 28 Sep 13:19:43 CEST 2024
 
